--- a/index.html
+++ b/index.html
@@ -5,21 +5,11 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="./js/typed.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
   
- <script src="https://code.jquery.com/jquery-1.12.4.min.js"></script>
- <script src="js/typed.min.js" type="text/javascript"></script>
- <script>
-  $(function(){
-      $(".element").typed({
-        strings: ["App Shah...", " an Engineer (MS)...","a WordPress Lover...", "a Java Developer..."],
-        typeSpeed:100,
-        backDelay:3000,
-        loop:true
-      });
-  });
-</script>
+
   <style>
     /* Remove the navbar's default margin-bottom and rounded borders */ 
     .navbar {
@@ -45,7 +35,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Portfolio</a>
+      <a class="navbar-brand" href="#">Vaibhav</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
@@ -54,9 +44,9 @@
         <li><a href="#">Gallery</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
+      <!-- <ul class="nav navbar-nav navbar-right"> -->
+        <!-- <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li> -->
+      <!-- </ul> -->
     </div>
   </div>
 </nav>
@@ -114,7 +104,18 @@
 
 <footer class="container-fluid text-center">
   <p>Footer Text</p>
+   
 </footer>
-
+    
+    <script src="./typed/js/jquery.js"></script>
+    <script src="./typed/js/typed.js"></script>
+    <script>
+        $(function(){
+            $(".element").typed({
+                strings: ["I'm Enthusiast", "I'm Myself.","I'm Vaibhav"],
+                typeSpeed: 30
+            });
+        });
+    </script>
 </body>
 </html>
