typing is working

--- a/index.html
+++ b/index.html
@@ -53,9 +53,8 @@
 
 <div class="jumbotron">
   <div class="container text-center">
-    <h1>My Portfolio</h1>
-	<p><span class="element"></span><span class="typed-cursor"></span>
-    </p>
+    <h1><span class="element"></span><span class="typed-cursor"></span></h1>
+	
   </div>
 </div>
   
@@ -112,7 +111,7 @@
     <script>
         $(function(){
             $(".element").typed({
-                strings: ["I'm Enthusiast", "I'm Myself.","I'm Vaibhav"],
+                strings: ["I'm Enthusiast", "I'm Myself.","I'm Vaibhav Bhatia"],
                 typeSpeed: 30
             });
         });
