added undermaintainence message

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 </div>
   
 <div class="container-fluid bg-3 text-center">    
-  <h3>Some of my Work</h3><br>
+  <h3>This site is under maintainence!<br>Will try to complete it soon :) </h3><br>
   <div class="row">
     <div class="col-sm-3">
       <p>Some text..</p>
