Added typed.js usage and social icons

--- a/index.html
+++ b/index.html
@@ -1,23 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Vaibhav Bhatia</title>
- <!DOCTYPE html>
+<title>Vaibhav Bhatia</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css">
-  <link rel="stylesheet" href="./css/style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-  <script src="./js/script.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
+  <!-- Font library -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <!-- Font library end -->
+  <script src="./typed/js/typed.js" type="text/javascript"></script>
+  <script src="./js/script.js"></script>
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-
-<div class="jumbotron text-center">
-  <h1>Vaibhav Bhatia</h1>
-  <p>| Developer | Coder | Dancer | Artist ( sketching ) | Hmmm.... Hobbist Basically </p>
-  <p> all social icons</p> 
+<head>
+  <div id = "title" class="jumbotron text-center">
+    <div id="name" class="wrap">
+      <h1>Vaibhav Bhatia</h1>
+      <p>| Developer | Coder | Dancer | Artist ( sketching ) | Hmmm.... Hobbist Basically |</p>
+      <div class="typed-wrap">
+        <div id ="typed-hobbies-strings">
+          <span>Hey, let me introduce myself!</span>
+          <p> I am a Software Development Engineer.</p>
+          <p> Sketching helps me putting out my emotions. </p>
+          <p> Dancing makes me forget all my worries .</p>
+          <p> I am currently learning flipping(a bit) and a bit of Calisthenics. ;p </p>
+          <p> In short, I just love to learn a bit a everything!</p>
+        </div>
+        <span id="typed-hobbies" style="white-space:pre;"></span>
+      </div>
+      <div class = "icons-block">
+        <p> all social icons</p>
+        <a href="#" class="fa fa-facebook"></a>
+        <a href="#" class="fa fa-twitter"></a>
+        <a href="#" class="fa fa-linkedin"></a>
+        <a href="#" class="fa fa-youtube"></a>
+        <a href="#" class="fa fa-instagram"></a>
+      </div>
+  </div>
 </div>
   
 <div class="container">
@@ -58,7 +80,5 @@
       </div>
     </div>
   </div>
-  
-</div>
 </body>
 </html>
