Added backgroud image and div transpparency

--- a/index.html
+++ b/index.html
@@ -16,35 +16,35 @@
 </head>
 <body>
 <head>
-  <div id = "title" class="jumbotron text-center">
-    <div id="name" class="wrap">
-      <h1>Vaibhav Bhatia</h1>
-      <p>| Developer | Coder | Dancer | Artist ( sketching ) | Hmmm.... Hobbist Basically |</p>
-      <div class="typed-wrap">
-        <div id ="typed-hobbies-strings">
-          <span>Hey, let me introduce myself!</span>
-          <p> I am a Software Development Engineer.</p>
-          <p> Sketching helps me putting out my emotions. </p>
-          <p> Dancing makes me forget all my worries .</p>
-          <p> I am currently learning flipping(a bit) and a bit of Calisthenics. ;p </p>
-          <p> In short, I just love to learn a bit a everything!</p>
+  <div id="title" class="jumbotron text-center">
+    <div class="wrap-container">
+      <div class="wrap">
+        <div id="name">Vaibhav Bhatia</div>
+        <p>| Developer | Coder | Dancer | Artist ( sketching ) | Hmmm.... Hobbist Basically |</p>
+        <div class="typed-wrap">
+          <div id ="typed-hobbies-strings">
+            <span>Hey, let me introduce myself!</span>
+            <p> I am a Software Development Engineer.</p>
+            <p> Sketching and dancing helps me putting out my emotions. </p>
+            <p> I am currently learning flipping(a bit) and a bit of Calisthenics. ;p </p>
+            <p> In short, I just love to learn a bit of everything!</p>
+          </div>
+          <span id="typed-hobbies" style="white-space:pre;"></span>
         </div>
-        <span id="typed-hobbies" style="white-space:pre;"></span>
+        <div class="icons-block">
+          <div class="icon-item"><a href="#" class="fa fa-facebook"></a></div>
+          <div class="icon-item"><a href="#" class="fa fa-instagram"></a></div>
+          <div class="icon-item"><a href="https://twitter.com/alwaysabhatia" class="fa fa-twitter"></a></a></div>
+          <div class="icon-item"><a href="https://www.youtube.com/channel/UCXYTLXldVHT90wYP7hrCGBg" class="fa fa-youtube"></a></a></div>
+          <div class="icon-item"><a href="https://in.linkedin.com/in/vaibhav-bhatia-4b171a113" class="fa fa-linkedin"></a></a></div>
+        </div>
       </div>
-      <div class = "icons-block">
-        <p> all social icons</p>
-        <a href="#" class="fa fa-facebook"></a>
-        <a href="#" class="fa fa-twitter"></a>
-        <a href="#" class="fa fa-linkedin"></a>
-        <a href="#" class="fa fa-youtube"></a>
-        <a href="#" class="fa fa-instagram"></a>
-      </div>
+    </div>
   </div>
-</div>
   
 <div class="container">
   <div class="row">
-    <div class="col-sm-4 btn" data-toggle="modal" data-target="#myModal" >
+    <!-- <div class="col-sm-4 btn" data-toggle="modal" data-target="#myModal" >
       <h3 >Dance</h3>
     </div>
     <div class="col-sm-4 btn">
@@ -52,7 +52,7 @@
     </div>
     <div class="col-sm-4 btn">
       <h3>Social</h3>        
-    </div>
+    </div> -->
   </div>
 </div>
 
