--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js"></script>
   <!-- Font library -->
+   <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
   <!-- Font library end -->
   <script src="./typed/js/typed.js" type="text/javascript"></script>
   <script src="./js/script.js"></script>
@@ -20,23 +22,26 @@
     <div class="wrap-container">
       <div class="wrap">
         <div id="name">Vaibhav Bhatia</div>
-        <p>| Developer | Coder | Dancer | Artist ( sketching ) | Hmmm.... Hobbist Basically |</p>
+        <!-- <p id = "heading-hobbies"><| Developer | Coder | Dancer | Artist ( Sketching ) |>  &nbsp | - Many more to come - |</p> -->
         <div class="typed-wrap">
           <div id ="typed-hobbies-strings">
             <span>Hey, let me introduce myself!</span>
-            <p> I am a Software Development Engineer.</p>
-            <p> Sketching and dancing helps me putting out my emotions. </p>
-            <p> I am currently learning flipping(a bit) and a bit of Calisthenics. ;p </p>
-            <p> In short, I just love to learn a bit of everything!</p>
+            <p> I am a Software Developer. </p>
+            <p> I am something, and </p>
+            <p> I am grateful about it.</p>
+            <p> Living life with no regrets.</p>
+            <p> Thanks for visiting!</p>
           </div>
           <span id="typed-hobbies" style="white-space:pre;"></span>
         </div>
         <div class="icons-block">
-          <div class="icon-item"><a href="#" class="fa fa-facebook"></a></div>
-          <div class="icon-item"><a href="#" class="fa fa-instagram"></a></div>
-          <div class="icon-item"><a href="https://twitter.com/alwaysabhatia" class="fa fa-twitter"></a></a></div>
-          <div class="icon-item"><a href="https://www.youtube.com/channel/UCXYTLXldVHT90wYP7hrCGBg" class="fa fa-youtube"></a></a></div>
-          <div class="icon-item"><a href="https://in.linkedin.com/in/vaibhav-bhatia-4b171a113" class="fa fa-linkedin"></a></a></div>
+          <div class="icon-item" data-toggle="tooltip" data-placement="bottom" title="Visit me on Github!" ><a href="https://www.github.com/xcepti0n" class="fa fa-github"></a></a></div>
+          <div class="icon-item" data-toggle="tooltip" data-placement="bottom" title="Visit me on Facebook!"><a href="#" class="fa fa-facebook"></a></div>
+          <div class="icon-item" data-toggle="tooltip" data-placement="bottom" title="Visit me on Instagram!"><a href="#" class="fa fa-instagram"></a></div>
+          <div class="icon-item" data-toggle="tooltip" data-placement="bottom" title="Visit me on Twitter!"><a href="https://twitter.com/alwaysabhatia" class="fa fa-twitter"></a></a></div>
+          <div class="icon-item" data-toggle="tooltip" data-placement="bottom" title="Visit me on Youtube!"><a href="https://www.youtube.com/channel/UCXYTLXldVHT90wYP7hrCGBg" class="fa fa-youtube"></a></a></div>
+          <div class="icon-item" data-toggle="tooltip" data-placement="bottom" title="Visit me on Linkedin!"><a href="https://in.linkedin.com/in/vaibhav-bhatia-4b171a113" class="fa fa-linkedin"></a></a></div>
+          <div class="icon-item" data-toggle="tooltip" data-placement="bottom" title="Visit me on Blogger!"><a href="https://xcepti0n.blogspot.com/" class="fab fa-blogger-b"></a></a></div>
         </div>
       </div>
     </div>
@@ -53,6 +58,14 @@
     <div class="col-sm-4 btn">
       <h3>Social</h3>        
     </div> -->
+  </div>
+  <div class="mid-content">
+      <span class="first-letter">I</span> am an art lover. Whether that art is in terms of sketch, dance, illustration, emotions, sports or code. I just love it, and more than happy to be part of it. I am currently working on my strength as a part of Calisthenics. I still still can't do the cool stuff like planche, front and back levers, but will surely do one day. Though I am sure, I won't remember to change it here.<br>
+      <br>
+      <hr><br>
+      <span class="quote-span">Just do what you don't wanna regret in future!</span><br>
+      <div style="text-align: right;" class="quote-name"> - Vaibhav Bhatia</div>
+      <hr><br>
   </div>
 </div>
 
