Modified mid content

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     </div> -->
   </div>
   <div class="mid-content">
-      <span class="first-letter">I</span> am an art lover. Whether that art is in terms of sketch, dance, illustration, emotions, sports or code. I just love it, and more than happy to be part of it. I am currently working on my strength as a part of Calisthenics. I still still can't do the cool stuff like planche, front and back levers, but will surely do one day. Though I am sure, I won't remember to change it here.<br>
+      <span class="first-letter">I</span> am an art lover. Whether the art is in terms of sketch, dance, illustration, emotions, sports or code. I just love it, and more than happy to be part of it. I am currently working on my strength as a part of Calisthenics. I still can't do cool stuff like planche, front and back levers, but will surely do them one day. Though I am sure, I won't remember to change it here.<br>
       <br>
       <hr><br>
       <span class="quote-span">Just do what you don't wanna regret in future!</span><br>
